Fix animation overflow

--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ li a:hover {
     background: yellow;
     animation: show-right 0.4s ease-out forwards;
     animation-delay: calc(0.1s * var(--i));
+    z-index: 100;
 }
 
 @keyframes show-right {
@@ -113,7 +114,7 @@ li a:hover {
 .sale-container {
     position: relative;
     width: 100%;
-    z-index: 2;
+    z-index: 1;
 }
 
 .sale-icon {
